Manifests/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web-app
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress
---
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
