Manifests/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: frontend
  template:
    metadata:
      labels:
        tier: frontend
    spec:
      containers:
        - name: frontend
          image: ahmadjamal710/todo-frontend:latest
          ports:
            - containerPort: 80
          resources:
            requests: {}
            limits: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: backend
  template:
    metadata:
      labels:
        tier: backend
    spec:
      containers:
        - name: backend
          image: ahmadjamal710/todo-backend:latest
          ports:
            - containerPort: 8000
          startupProbe:
            initialDelaySeconds: 10
            httpGet:
              path: /health/
              port: 8000
          resources:
            requests: {}
            limits: {}
