Manifests/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: web-app
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    tier: frontend
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: web-app
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    tier: backend
