Manifests/statefulsets.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-svc
  namespace: web-app
spec:
  clusterIP: None
  selector:
    tier: database
  ports:
    - port: 3306
      name: mysql
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: database
  namespace: web-app
spec:
  selector:
    matchLabels:
      tier: database
  serviceName: "database-svc"
  replicas: 1
  minReadySeconds: 10
  template:
    metadata:
      labels:
        tier: database
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: mysql
          image: mysql:latest
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
      nodeSelector:
        topology.kubernetes.io/zone: us-east-1a
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: database-pvc
